# aism

./: .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260514_01_create_initial_dialogue_schema.py  20260514_02_add_business_manager_schema.py  20260514_03_add_clients_and_bot_channels.py  20260515_04_add_bot_prompts.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base_mixins.py  bot.py  bot_channel.py  bot_field.py  bot_prompt.py  bot_question.py  bot_settings.py  client.py  conversation.py  end_user.py  human_question.py  knowledge_block.py  lead.py  lead_field_value.py  message.py
backend/app/repositories/: __init__.py  bot_channel_repository.py  bot_field_repository.py  bot_prompt_repository.py  bot_question_repository.py  bot_repository.py  bot_settings_repository.py  client_repository.py  conversation_repository.py  end_user_repository.py  human_question_repository.py  knowledge_repository.py  lead_repository.py  message_repository.py
backend/app/schemas/: __init__.py  bot_admin.py  bot_field_admin.py  bot_prompt_admin.py  bot_question_admin.py  bot_settings_admin.py  client.py  conversation_admin.py  human_question_admin.py  knowledge_admin.py  lead_admin.py
backend/app/scripts/: __init__.py  seed_demo_bot.py
backend/app/services/: ai_response_parser.py  business_context_service.py  dialogue_storage_service.py  (+9 more)
backend/tests/: smoke_test.py
(+17 files in other folders)
