[project]
name = "aism-backend"
version = "0.1.0"
description = "MVP backend foundation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.0.0",
  "alembic>=1.14.0"
]

[tool.uvicorn]
factory = true
